Fixed alignment of temp

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -53,3 +53,7 @@ footer {
 a {
   text-decoration: none;
 }
+
+.float-left {
+  float: left;
+}
